<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pooltables"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/buscar_mesa2"
    android:maxHeight="300dp">

    <TextView
        android:id="@+id/txSitio"
        android:layout_width="202dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/local"
        android:textColor="@color/SaddleBrown"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/ivLocal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txLocalidad"
        android:layout_width="201dp"
        android:layout_height="64dp"
        android:layout_marginBottom="48dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/en"
        android:textColor="@color/SaddleBrown"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivLocal"
        app:layout_constraintStart_toEndOf="@id/ivLocal"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txDireccion"
        android:layout_width="202dp"
        android:layout_height="102dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/calle"
        android:textColor="@color/SaddleBrown"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/ivLocal"
        app:layout_constraintTop_toBottomOf="@id/txLocalidad" />

    <TextView
        android:id="@+id/txProvincia"
        android:layout_width="202dp"
        android:layout_height="43dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/provinciadospuntos"
        android:textColor="@color/SaddleBrown"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txDireccion"
        app:layout_constraintTop_toBottomOf="@+id/txDireccion"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ivLocal"
        android:layout_width="163dp"
        android:layout_height="172dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagenlocal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>