<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mesasPartidas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mesa_item"
    android:maxHeight="150dp">

    <TextView
        android:id="@+id/txSitio"
        android:layout_width="250dp"
        android:layout_height="63dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/local"
        android:textColor="@color/SaddleBrown"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/ivSitio"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txDireccion"
        android:layout_width="251dp"
        android:layout_height="86dp"
        android:layout_marginStart="4dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/calle"
        android:textColor="@color/SaddleBrown"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivSitio" />

    <ImageView
        android:id="@+id/ivSitio"
        android:layout_width="137dp"
        android:layout_height="144dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/imagenlocal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>